--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Verdana;
-   
+    background-image: url(iconlogo.jpg);
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
